[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "statick-md"
authors = [{name = "NIWC Pacific"}]
description="Statick analysis plugins for Markdown files."
version = "0.1.3"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "CC0-1.0"}
classifiers = [
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "importlib_metadata",
    "proselint",
    "restructuredtext-lint",
    "rstcheck",
    "sphinx",
    "statick@git+https://github.com/tdenewiler/statick#egg=stdlib-plugins",  # Remove URL after Statick release.
    "types-docutils",
]

[tool.setuptools.package-data]
statick_tool = [
    "rsc/*",
    "rsc/.*",
]

[project.entry-points."statick_tool.plugins.discovery"]
markdown = "statick_tool.plugins.discovery.markdown:MarkdownDiscoveryPlugin"
rst = "statick_tool.plugins.discovery.rst:RstDiscoveryPlugin"

[project.entry-points."statick_tool.plugins.tool"]
markdownlint = "statick_tool.plugins.tool.markdownlint:MarkdownlintToolPlugin"
proselint = "statick_tool.plugins.tool.proselint:ProselintToolPlugin"
rstcheck = "statick_tool.plugins.tool.rstcheck:RstcheckToolPlugin"
rstlint = "statick_tool.plugins.tool.rstlint:RstlintToolPlugin"
writegood = "statick_tool.plugins.tool.writegood:WriteGoodToolPlugin"

[project.urls]
"Homepage" = "https://github.com/sscpac/statick-md"
"Bug Tracker" = "https://github.com/sscpac/statick-md/issues"

[project.optional-dependencies]
test = [
    "coverage",
    "flake8-pep3101",
    "flake8<5",  # Pin until https://github.com/tholo/pytest-flake8/issues/87 is fixed.
    "mock",
    "mypy",
    "pycodestyle<2.9.0",  # Pin until https://github.com/tholo/pytest-flake8/issues/87 is fixed.
    "pydocstyle",
    "pytest",
    "pytest-cov",
    "pytest-flake8",
    "pytest-isort",
    "statick@git+https://github.com/tdenewiler/statick#egg=stdlib-plugins",  # Remove URL after Statick release.
    "tox",
    "tox-gh-actions",
]
docs = [
    "sphinx==1.7.9",
    "travis-sphinx==2.2.1",
    "yaml-1.3",
    "yapsy",
]
